--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <meta charset="utf-8" />
 
-    <script src="js/jszip.min.js"> </script>
-    <script src="js/myXLSX.js"></script>
-    <script src="js/ssf.js"></script>
+     <!--  <script src="js/jszip.min.js"> </script> -->
+    <script src="js/myXLSX.min.js"></script>
+   <!-- <script src="js/ssf.js"></script> -->
 
     <style>
         .clicked {
@@ -22,7 +22,7 @@
     Based on the <br>
     https://github.com/SheetJS <br>
     https://github.com/SheetJS/ssf <br>
-    https://stuk.github.io/jszip/ <br>
+    https://github.com/Stuk/jszip <br>
     <br>
     <br>
     <label for="file">Read EXCEL file</label>
