--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
 
      <!--  <script src="js/jszip.min.js"> </script> -->
-    <script src="js/myXLSX.min.js"></script>
+    <script src="js/myXLSX.all.js"></script>
    <!-- <script src="js/ssf.js"></script> -->
 
     <style>
